--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="trivia.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
     <title>Game of Trivia!</title>
 </head>
@@ -17,7 +17,7 @@
     </header>
 
     <div id="start-page">
-            <img src="begin.gif">
+            <img src="assets/images/begin.gif">
             <br><br>
             <button type="button" class="start-button btn btn-dark btn-lg">Begin</button>
     </div>
@@ -65,14 +65,14 @@
       <p id="correct">Correct:</p>
       <p id="incorrect">Incorrect: </p>
       <p id="unsanswered">Unanswered: </p>
-      <br><br>
-      <img src="joffrey.gif">
+      <br>
+      <img src="assets/images/joffrey.gif">
       <br><br>
   </div>
   <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <script src="trivia.js"></script>
+  <script src="assets/app.js"></script>
 </body>
 </html>
