--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
 <div id="quiz">
     <form>
   <h3>Answer all the questions before the time runs out!</h3>  
-  <h4>Time Remaining: </h4>
-      <h5>Q1. What was the name of Robb Stark's Dire Wolf?</h5><br>
+  <h4 id="timer">Time Remaining: <span id="quiz-timer">60</span></h4>
+      <h5 id="q1">Q1. What was the name of Robb Stark's Dire Wolf?</h5><br>
       <input type="radio" name="Q1" value="ghost"> "Ghost"
       <input type="radio" name="Q1" value="greywind"> "Grey Wind"
       <input type="radio" name="Q1" value="shaggydog"> "Shaggydog"
       <input type="radio" name="Q1" value="summer"> "Summer"
       <br><br>
-      <h5>Q2. Who was King of Westeros at the start of GoT Season 1?</h5><br>
+      <h5 id="q2">Q2. Who was King of Westeros at the start of GoT Season 1?</h5><br>
       <input type="radio" name="Q2" value="jaime"> "Jaime Lannister"
       <input type="radio" name="Q2" value="robert"> "Robert Baratheon"
       <input type="radio" name="Q2" value="ned"> "Ned Stark"
       <input type="radio" name="Q2" value="robb"> "Robb Stark"
       <br><br>
-      <h5>Q3. What is the name of Daenaerys' main dragon?</h5><br>
+      <h5 id="q3">Q3. What is the name of Daenaerys' main dragon?</h5><br>
       <input type="radio" name="Q3" value="drogo"> "Drogo"
       <input type="radio" name="Q3" value="viserys"> "Viserys"
       <input type="radio" name="Q3" value="Balerion"> "Balerion"
       <input type="radio" name="Q3" value="drogon"> "Drogon"
       <br><br>
-      <h5>Q4. Which knight renounces his title in Westeros in order to go serve Daenaerys?</h5><br>
+      <h5 id="q4">Q4. Which knight renounces his title in Westeros in order to go serve Daenaerys?</h5><br>
       <input type="radio" name="Q4" value="daario"> "Daario Naharis"
       <input type="radio" name="Q4" value="loras"> "Loras Tyrell"
       <input type="radio" name="Q4" value="jorah"> "Jorah Mormont"
       <input type="radio" name="Q4" value="barristan"> "Barristan Selmy"
       <br><br>
-      <h5>Q5. Who was really responsible for King Joffrey's murder?</h5><br>
+      <h5 id="q5">Q5. Who was really responsible for King Joffrey's murder?</h5><br>
       <input type="radio" name="Q5" value="daenaerys"> "Daenaerys Targaryen"
       <input type="radio" name="Q5" value="brienne"> "Brienne of Tarth"
       <input type="radio" name="Q5" value="olenna"> "Olenna Tyrell"
