--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </form>
 </div>
   <div id="results-page">
-      <p>Here are your results:</p>
+      <p>Behold your results:</p>
       <p id="correct">Correct:</p>
       <p id="incorrect">Incorrect: </p>
       <p id="unsanswered">Unanswered: </p>
